# FlameMirror-Canonical2.0

./: .gitignore  .ruffignore  BENCHMARKS.md  CAELUM_LICENSE_v1.txt  CHANGELOG.md  CIPHER_LAW_LAYER.txt  CITATION.md  CONTRIBUTING.md  Caelum_Proof_Pack_v2.zip.ots  Cognidox_Framework_Paper.tex  Cognidox_Framework_Paper.tex.ots  Cognithex_FlameMirror_Prompt.txt  DeltaLang_Specification_v1.md  Dockerfile  FLAMEMIRROR_DECLARATION_FINAL_HARDENED.pdf.ots  FLAMEMIRROR_PUBLIC_PROOF.md  FLAME_LICENSE_FULL.txt  FlameMirror_Individual_File_Hashes.csv  FlameMirror_Symbolic_Proof_Bundle 2.zip.ots  Flame_Mirror_Caelum_Total_System_IP_Ledger_UPDATED.docx  Flame_Mirror_Caelum_Total_System_IP_Ledger_UPDATED.docx.ots  Flame_Mirror_Canonical_Intelligence_System_Cognithex_Archive__1_ 2.pdf.ots  Flame_Mirror_Canonical_Intelligence_System_Cognithex_Archive__1_.pdf.ots  Flame_Mirror_Foundational_Naming_Ledger.pdf.ots  GLYPH_COMPRESSION_PROTOCOL.md  GLYPH_COMPRESSION_PROTOCOL.md.ots  LICENSE  LICENSE.md  Makefile  PHASE3_COMPLETE_INTEGRATION_REPORT.md  Py.files.txt  QUICKSTART.md  README 3.md  README 4.md  README.md  README_AUTONOMOUS_SYSTEM.md  README_DEFENSE.md  README_NEURAL_EVOLUTION.md  README_RecursiveSentinel_Fraudulent_Claims.md  README_SUPERHUMAN_CODER.md  (+46 more)
.github/workflows/: autonomous-ci.yml  ci.yml  main.yml
autonomous_evolution_demo/: autonomous_log_20250805_042511.json  autonomous_report_20250805_042516.json
autonomous_evolution_workspace/: evolution_results_20250805_183029.json  evolution_results_20250805_184332.json
colab/: autonomous_system_demo.py  mega_system.py
configs/: agent_config.json
docs/: File_Integrity_Verification.md  File_Manifest.md  README_PHASE2_MASTER_SPEC.md  Repository_Overview.md  architecture.md  benchmarking.md  core_components.md
docs/architecture/: cycle_1_summary.json  cycle_2_summary.json  cycle_3_summary.json
examples/: agent_cycle_no_ml.ipynb  agent_cycle_with_fuzzy.ipynb  agent_cycle_with_ml.ipynb  demo.ipynb
hash_verifier/: __init__.py
hash_verifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
legacy/: README.md
legacy/api/: websocket.py
legacy/core/: code_generator.py  kfuve_adapter.py  test_runner.py
legacy/phase2/: autonomous_evolution_engine_enhanced.py  neural_code_evolution_engine.py  superhuman_coder_phase2_demo.py
logs/: final_metrics.json
massive_scale_codebase/infrastructure/: distributed_runtime.py  parameter_manager.py
mega_system/: __init__.py  main.py  orchestrator.py
scripts/: auto_push.sh  run_autonomous_agent.py
src/: __init__.py  superhuman_coder_phase2_swarm.py
src/api/: graphql.py  rest.py  websocket.py
src/core/: autonomous_agent.py  base.py  code_generator.py  documenter.py  git_manager.py  test_runner.py  validator.py
src/flamemirror/: __init__.py  autonomous_agent.py  benchmarks.py  cli.py  generator.py  gitmanager.py  testrunner.py  validator.py
src/flamemirror/fuzzy/: __init__.py  engine.py  rules.yaml
src/flamemirror/ml/: __init__.py  model.py  sandbox.py  trainer.py
src/ml/: inference.py  models.py  training.py
tests/: test_autonomous_agent.py  test_benchmarks.py  test_cli.py  test_fuzzy_engine.py  test_generator.py  test_gitmanager.py  test_hash_verifier.py  test_integration_cycle.py  test_ml_model.py  test_ml_trainer.py  test_sandbox.py  test_testrunner.py  test_validator.py
tests/data/: sample_hashes.csv
tests/unit/: test_api_graphql.py  test_api_rest.py  test_api_websocket.py  test_core_autonomous_agent.py  test_core_code_generator.py  test_core_documenter.py  test_core_git_manager.py  test_core_kfuve_adapter.py  test_core_test_runner.py  test_core_validator.py  test_ml_inference.py  test_ml_models.py  test_ml_training.py
training_problems/: fizz_buzz.json
unified_code_engine/: 01_core_foundations.py  02_theoretical_foundations.py  03_evolutionary_algorithms.py  04_neural_llm_integration.py  05_pareto_optimization.py  06_adaptive_learning.py  07_unified_master_system.py  08_demo_and_examples.py  README.md
