[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flamemirror"
version = "0.1.0"
description = "Autonomous FlameMirror agent framework with fuzzy guidance and ML-assisted code generation"
readme = "README.md"
authors = [
    {name = "FlameMirror Contributors"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typing-extensions>=4.8.0",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1.9",
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "ipykernel>=6.30",
]

[project.scripts]
run-flamemirror = "flamemirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=flamemirror --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["flamemirror"]
omit = ["src/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "legacy",
    "adaptive_learning_engine.py",
    "advanced_evolutionary_algorithms.py",
    "autonomous_*.py",
    "massive_scale_codebase",
    "massive_scale_generator.py",
    "neural_*.py",
    "pareto_fitness_optimizer.py",
    "superhuman_*.py",
    "theoretical_foundations.py",
    "hash_verifier",
    "training_problems",
    "autonomous_evolution_workspace",
    "dist",
    "colab_*.py",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["flamemirror"]
warn_unused_configs = true
